# robot

./: README.md  pyproject.toml  pytest.ini
robot/: __init__.py  command.py  directory.py  generated_file.py  robot.py  static_file.py  web_file.py
tests/: test_command.py  test_directory.py  test_generated_file.py  test_real_build.py  test_robot.py  test_static_file.py  test_web_file.py
